# chess

./: .gitignore  README.md  pyproject.toml
data/chroma.db/: info.txt
src/chess/: ToDo.txt  bot.py  chess.py  chess_client.py  chess_oo.py  chess_server.py  keywords.py  vectordb.py
src/chess_oo/: chess_oo.py  demo_pp.py
tests/: test_bot.py  test_chess.py  test_chess_oo.py
