[project]
name = "chess"
version = "0.1.0"
description = ""
authors = [
    {name = "Andy Miles",email = "akmiles@icloud.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "chromadb (>=0.6.3,<0.7.0)",
    "transformers (>=4.48.0,<5.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pysnooper (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "chess", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
